<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:background="@color/white_color"
    android:weightSum="3"
    >

    <TextView
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook_button"
        android:text="@string/facebook"
        android:paddingVertical="@dimen/small_margin"
        android:paddingHorizontal="@dimen/buttons_margin"
        android:textAppearance="@style/LightTextAppearanceSmall"
        android:layout_marginHorizontal="@dimen/very_v_small_margin"
        android:textSize="@dimen/small_text_size"
        />

    <TextView
        android:id="@+id/twitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/twitter_button"
        android:text="@string/twitter"
        android:paddingVertical="@dimen/small_margin"
        android:paddingHorizontal="@dimen/buttons_margin"
        android:textAppearance="@style/LightTextAppearanceSmall"
        android:layout_marginHorizontal="@dimen/very_v_small_margin"
        android:textSize="@dimen/small_text_size"
        />
    <TextView
        android:id="@+id/googlePlusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/google_button"
        android:text="@string/google"
        android:paddingVertical="@dimen/small_margin"
        android:paddingHorizontal="@dimen/buttons_margin"
        android:textAppearance="@style/LightTextAppearanceSmall"
        android:layout_marginHorizontal="@dimen/very_v_small_margin"
        android:textSize="@dimen/small_text_size"
        />
</LinearLayout>