<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        >

        <ImageView
            android:id="@+id/close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/medium_margin"
            android:background="@drawable/cross_icon"
            />
        <RelativeLayout
            android:id="@+id/pagerLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:background="@drawable/round_corner_no_bg"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_below="@id/close"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:visibility="visible"
                />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/greater_card_corner_radius"
                app:cardElevation="@dimen/v_greater_elevation"
                app:cardMaxElevation="@dimen/v_greater_elevation"
                >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_height"
                android:id="@+id/bannerImage"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                />

                <LinearLayout
                    android:id="@+id/SliderDots"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_alignParentStart="true"
                    />

            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailsLayout"
            android:layout_below="@id/pagerLayout"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"
            >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_restaurant"
                android:fontFamily="@font/montserratsemibold"
                android:textStyle="bold"
                android:maxLines="2"
                android:textAllCaps="true"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/black"
                android:layout_toLeftOf="@id/price"
                android:layout_marginRight="@dimen/very_small_margin"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rsValue"
                android:fontFamily="@font/montserratbold"
                android:textStyle="bold"
                android:maxLines="1"
                android:textAllCaps="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/medium_text_size"
                android:textColor="@color/googlePlusColor"
                />

            <TextView
                android:id="@+id/rupees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rupees per day"
                android:fontFamily="@font/montserratregular"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/darkGrey"
                android:layout_below="@id/price"
                />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cityDescription"
                android:fontFamily="@font/montserratregular"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_below="@id/name"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/darkGrey"
                />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:fontFamily="@font/montserratregular"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_below="@id/name"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/darkGrey"
                android:layout_toRightOf="@id/cityName"
                android:layout_marginHorizontal="@dimen/very_small_margin"
                />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_rating"
                android:fontFamily="@font/montserratregular"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_below="@id/cityName"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/bronzeBlue"
                android:layout_marginTop="@dimen/very_v_small_margin"
                />

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_starSize="@dimen/small_rating_stars_size"
                android:soundEffectsEnabled="true"
                android:theme="@style/RatingBar"
                app:srb_numberOfStars="1"
                app:srb_isIndicator="true"
                app:srb_starBackgroundColor="@color/bronzeBlue"
                app:srb_borderColor="@color/bronzeBlue"
                android:layout_toRightOf="@id/rating"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/very_small_margin"
                android:layout_below="@id/cityName"
                />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/montserratsemibold"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:layout_below="@id/rating"
                android:layout_marginTop="@dimen/normal_margin"
                />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/montserratlight"
                android:textStyle="bold"
                android:maxLines="4"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/grey_500"
                android:layout_below="@id/desc"
                android:layout_marginTop="@dimen/very_v_small_margin"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/addressHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:fontFamily="@font/montserratsemibold"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:layout_below="@id/description"
                android:layout_marginTop="@dimen/large_margin"
                />

            <TextView
                android:id="@+id/kms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kms"
                android:fontFamily="@font/montserratsemibold"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="@dimen/normal_text_size"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:layout_below="@id/description"
                android:layout_marginTop="@dimen/large_margin"
                />

            <TextView
                android:id="@+id/fromLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromLocation"
                android:fontFamily="@font/montserratlight"
                android:textStyle="bold"
                android:maxLines="4"
                android:textSize="@dimen/very_small_text_size"
                android:layout_alignParentRight="true"
                android:textColor="@color/grey_500"
                android:layout_below="@id/kms"
                />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_restaurant"
                android:fontFamily="@font/montserratlight"
                android:textStyle="bold"
                android:layout_below="@id/addressHeading"
                android:textSize="@dimen/small_text_size"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_toRightOf="@id/fromLocation"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"
                android:layout_alignBottom="@id/fromLocation"
                />

            <TextView
                android:id="@+id/phNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber"
                android:fontFamily="@font/montserratlight"
                android:textStyle="bold"
                android:maxLines="4"
                android:textSize="@dimen/very_small_text_size"
                android:textColor="@color/grey_500"
                android:layout_below="@id/address"
                android:layout_marginTop="@dimen/very_small_margin"
                />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_ph_no"
                android:fontFamily="@font/montserratsemibold"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:layout_below="@id/phNo"
                />

            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:fontFamily="@font/montserratlight"
                android:textStyle="bold"
                android:maxLines="4"
                android:textSize="@dimen/very_small_text_size"
                android:textColor="@color/grey_500"
                android:layout_below="@id/address"
                android:layout_marginTop="@dimen/very_small_margin"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:id="@+id/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_email"
                android:fontFamily="@font/montserratsemibold"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:layout_below="@id/phNo"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/selectRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_room"
            android:layout_below="@id/detailsLayout"
            android:fontFamily="@font/montserratregular"
            android:textStyle="bold"
            android:background="@drawable/select_room_btn"
            android:maxLines="1"
            android:paddingVertical="@dimen/small_margin"
            android:paddingHorizontal="@dimen/medium_margin"
            android:textSize="@dimen/above_small_text_size"
            android:textColor="@color/white_color"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

</ScrollView>